Create hackathon usecase